--- a/index.html
+++ b/index.html
@@ -20,25 +20,13 @@
             padding: 8px;
             text-align: left;
         }
-        th:first-child {
-            background-color: #0057B7; /* Azul (cor da bandeira da Ucrânia) */
-            color: white; /* Texto branco para contraste */
+        th:first-child, .moeda { /* Cor azul para coluna "Moeda" */
+            background-color: #0057B7;
+            color: white;
         }
-        th:last-child {
-            background-color: #FFD700; /* Amarelo (cor da bandeira da Ucrânia) */
-            color: black; /* Texto preto para contraste */
-        }
-        .usd {
-            color: green;
-        }
-        .btc {
-            color: orange;
-        }
-        .ltc {
-            color: silver;
-        }
-        .xmr {
-            color: red;
+        th:last-child, .valor { /* Cor amarela para coluna "Valor (BRL)" */
+            background-color: #FFD700;
+            color: black;
         }
         .flag {
             position: absolute;
@@ -62,42 +50,61 @@
     <table id="cotacoes">
         <thead>
             <tr>
-                <th>Moeda</th>
-                <th>Valor (BRL)</th>
+                <th class="moeda">Moeda</th>
+                <th class="valor">Valor (BRL)</th>
             </tr>
         </thead>
         <tbody>
             <tr>
-                <td class="usd">Dólar (USD)</td>
-                <td id="usd">Carregando...</td>
+                <td class="moeda">Dólar (USD)</td>
+                <td class="valor" id="usd">Carregando...</td>
             </tr>
             <tr>
-                <td class="btc">Bitcoin (BTC)</td>
-                <td id="btc">Carregando...</td>
+                <td class="moeda">Bitcoin (BTC)</td>
+                <td class="valor" id="btc">Carregando...</td>
             </tr>
             <tr>
-                <td class="ltc">Litecoin (LTC)</td>
-                <td id="ltc">Carregando...</td>
+                <td class="moeda">Ethereum (ETH)</td>
+                <td class="valor" id="eth">Carregando...</td>
             </tr>
             <tr>
-                <td class="xmr">Monero (XMR)</td>
-                <td id="xmr">Carregando...</td>
+                <td class="moeda">Litecoin (LTC)</td>
+                <td class="valor" id="ltc">Carregando...</td>
+            </tr>
+            <tr>
+                <td class="moeda">Monero (XMR)</td>
+                <td class="valor" id="xmr">Carregando...</td>
             </tr>
         </tbody>
     </table>
 
     <script>
         async function fetchCotacoes() {
+            const apiKey = 'SUA_API_KEY_AQUI'; // Insira sua chave de API CoinMarketCap
+            const url = 'https://pro-api.coinmarketcap.com/v1/cryptocurrency/quotes/latest';
+
+            const symbols = ['USD', 'BTC', 'ETH', 'LTC', 'XMR'];
+
             try {
-                const res = await fetch('https://api.coingecko.com/api/v3/simple/price?ids=usd,bitcoin,litecoin,monero&vs_currencies=brl');
-                const data = await res.json();
-                
-                document.getElementById('usd').innerText = data.usd.brl.toFixed(2);
-                document.getElementById('btc').innerText = Math.floor(data.bitcoin.brl);
-                document.getElementById('ltc').innerText = data.litecoin.brl.toFixed(2);
-                document.getElementById('xmr').innerText = data.monero.brl.toFixed(2);
+                const symbolsParam = symbols.join(',');
+                const response = await fetch(`${url}?symbol=${symbolsParam}&convert=BRL`, {
+                    method: 'GET',
+                    headers: {
+                        'X-CMC_PRO_API_KEY': apiKey
+                    }
+                });
+
+                const data = await response.json();
+
+                // Atualizando os valores na tabela
+                document.getElementById('usd').innerText = data.data.USD.quote.BRL.price.toFixed(2);
+                document.getElementById('btc').innerText = data.data.BTC.quote.BRL.price.toFixed(2);
+                document.getElementById('eth').innerText = data.data.ETH.quote.BRL.price.toFixed(2);
+                document.getElementById('ltc').innerText = data.data.LTC.quote.BRL.price.toFixed(2);
+                document.getElementById('xmr').innerText = data.data.XMR.quote.BRL.price.toFixed(2);
             } catch (error) {
                 console.error('Erro ao buscar cotações:', error);
+                document.querySelectorAll('td[id]').forEach(td => td.innerText = 'Erro');
             }
         }
 
